--- a/package.xml
+++ b/package.xml
@@ -3,11 +3,9 @@
 <package format="3">
   <name>ros2_launch_demo</name>
   <version>0.0.0</version>
-  <description>ROS 2 launch file demonstration package (talker + listener + parameters)</description>
-  <maintainer email="your.name@example.com">Your Name</maintainer>
+  <description>ROS2 launch file demo with talker + listener + parameter</description>
+  <maintainer email="you@example.com">Your Name</maintainer>
   <license>Apache-2.0</license>
-
-  <buildtool_depend>ament_cmake</buildtool_depend>
 
   <depend>rclcpp</depend>
   <depend>std_msgs</depend>
